# OrionXCore

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_NOTES.md  README.md  README_zh.md  TODO.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
src/orionxcore/: app.py  cli.py  config.py  main.py  schemas.py
src/orionxcore/api/: __init__.py  playground.py  routes.py
src/orionxcore/llm/: __init__.py  openai_compat.py
src/orionxcore/services/: __init__.py  agent.py
src/orionxcore/tools/: __init__.py  base.py  database.py  filesystem.py  registry.py  terminal.py
tests/: test_agent_database_events.py  test_chat_completions.py  test_cli.py  test_database_tool.py  test_filesystem_tool.py  test_health.py  test_playground.py
